added similar stylings for institutes and applications

--- a/client/src/assets/css/sideBar.css
+++ b/client/src/assets/css/sideBar.css
@@ -9,7 +9,6 @@
 
 .side-menu {
     height: 100%;
-    background-color: #F2F2F2;
+    background-color: #f2f2f2;
     padding-top: 10px;
-    width: 110%;
 }
