--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,22 +10,33 @@ body {
     font-family: "Nunito Sans", sans-serif;
 }
 
+.ant-layout-sider {
+    width: 250px !important;
+}
+
 /* Sider */
 .sider {
-    height: calc(100vh - 64px);
+    position: fixed;
+    top: 64px;
+    left: 0;
+    bottom: 0;
     background-color: #f2f2f2;
     border-right: 1px solid #e0e0e0;
     box-shadow: 2px 0 6px rgba(64, 64, 64, 0.1);
+    overflow-y: auto;
+    border: 1px solid green;
 }
 
 .content {
+    padding: 24px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: calc(100vh - 64px);
-    overflow-y: scroll;
-    padding: 160px 24px 20px 24px;
+    margin-left: 250px;
+    margin-top: 64px;
+    background-color: #f5f5f5;
+    min-height: calc(100vh - 64px);
+    overflow-y: auto;
+    border: 1px solid red;
 }
 
 /* Sider ->  Menu */
@@ -43,6 +54,15 @@ body {
 }
 
 /* Header */
+.header {
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    height: 64px;
+    padding: 0;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
 :where(.css-dev-only-do-not-override-cdzvx5).ant-layout-header {
     padding: 0;
     border-bottom: 1px solid #e0e0e0;
