--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,8 @@ body {
 
 .ant-layout-sider {
     width: 250px !important;
+    max-width: 250px !important;
+    min-width: 250px !important;
 }
 
 /* Sider */
