--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@ body {
     border-right: 1px solid #e0e0e0;
     box-shadow: 2px 0 6px rgba(64, 64, 64, 0.1);
     overflow-y: auto;
-    border: 1px solid green;
+    /* border: 1px solid #085111; */
 }
 
 .content {
@@ -38,7 +38,7 @@ body {
     background-color: #f5f5f5;
     min-height: calc(100vh - 64px);
     overflow-y: auto;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 /* Sider ->  Menu */
